--- a/Controller/templates/videoRequest.html
+++ b/Controller/templates/videoRequest.html
@@ -51,6 +51,15 @@
 
 </head>
 <body>
+    <!--flash를 위한 구문-->
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <script>
+                alert("{{messages[-1]}}")
+            </script>
+        {% endif %}
+    {% endwith %}
+
     <!-- 네비게이션바-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">{% include 'nav.html' %}</nav>
 
