--- a/Controller/templates/videoList.html
+++ b/Controller/templates/videoList.html
@@ -22,6 +22,9 @@
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
 
+    <!--vedio CDN-->
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel ="stylesheet" href ="{{ url_for('static', filename='css/styles.css') }}"/>
     <link rel ="stylesheet" href ="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
@@ -30,11 +33,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- 사용자CSS -->
-    <!--    <link rel="stylesheet" href="{{ url_for('static', filename='css/tab.css') }}">-->
     <!--    <link rel="stylesheet" href="{{ url_for('static', filename='css/video.css') }}">-->
     <!--    <link rel="stylesheet" href="{{ url_for('static', filename='css/law.css') }}">-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/videosort.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/nav.css') }}">
+    <script src="{{ url_for('static', filename='js/signup.js') }}"></script>
 
     <!-- 요청부 -->
     <script>
@@ -53,31 +56,47 @@
 <main>
     <!-- 컨텐츠 표시 -->
 
-    <div class="mainclass">
-        {% for item in list %}
-            {% if item[8] == "complete" %}
-                <div style="text-align: center;">
-                    <video style="position: static;" controls width="500">
-                    <source src="{{url_for('static', filename=item[0])}}" type="video/mp4">
-                    <a href="{{url_for('static', filename=item[0])}}">MP4</a>
-                    </video>
-                </div>
+    <div id="myform" class="text-center bg-light text-dark bg-opacity-100 d-inline-block">
+        <div class="m-3 p-3">
+            <h4 class="mb-3">Video List</h4>
+            <hr>
 
-            {% else %}
-                <div style="text-align: center; position: static;">
-                    <span class="back " style="overflow: hidden">
-                        <span>영</span>
-                        <span>상</span>
-                        <span>준</span>
-                        <span>비</span>
-                        <span>중</span>
-                    </span>
-                </div>
-            {% endif %}
-        {% endfor %}
+            <video id="player" style="position: static;" controls width="500">
+                <source src="{{url_for('static', filename='TEST1.mp4')}}" type="video/mp4">
+                <a href="{{url_for('static', filename='TEST1.mp4')}}">MP4</a>
+            </video>
+
+
+            <!-- Video List -->
+            <div class="mainclass">
+                {% for item in list %}
+                    {% if item[8] == "complete" %}
+                        <div style="text-align: center;">
+                            <video id="player" style="position: static;" controls width="500">
+                                <source src="{{url_for('static', filename=item[0])}}" type="video/mp4">
+                                <a href="{{url_for('static', filename=item[0])}}">MP4</a>
+                            </video>
+                        </div>
+                    {% else %}
+                        <div style="text-align: center; position: static;">
+                            <span class="back" style="overflow: hidden">
+                                <span>영</span>
+                                <span>상</span>
+                                <span>준</span>
+                                <span>비</span>
+                                <span>중</span>
+                            </span>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
     </div>
 
 </main>
+
+<!-- VIDEO CDN-->
+<script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 
 <!-- 사용자 JS -->
 <script src="{{ url_for('static', filename='js/law.js') }}"></script>
