--- a/Controller/templates/videoRequest.html
+++ b/Controller/templates/videoRequest.html
@@ -116,7 +116,7 @@
                                 <label for="terms" class="form-check-label form-check-inline "><strong>열람 사유 &nbsp; &nbsp;</strong></label>
                                 <input class="form-check-input" id="Personal" type="radio" name="part" value="Personal"> 개인&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                 <input class="form-check-input" id="Public" type="radio" name="part" value="Public"> 공무
-{#                                <textarea cols="38" rows="3" placeholder="간단히 적어주세요."></textarea>#}
+                                <textarea id="partText" cols="38" rows="5" placeholder="간단히 적어주세요."></textarea>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="wantTime" class="form-check-label"><strong>원하는 시간</strong></label>
