--- a/Controller/templates/videoList.html
+++ b/Controller/templates/videoList.html
@@ -34,10 +34,9 @@
 
     <!-- 사용자CSS -->
     <!--    <link rel="stylesheet" href="{{ url_for('static', filename='css/video.css') }}">-->
-    <!--    <link rel="stylesheet" href="{{ url_for('static', filename='css/law.css') }}">-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/videosort.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/nav.css') }}">
-    <script src="{{ url_for('static', filename='js/signup.js') }}"></script>
+
 
     <!-- 요청부 -->
     <script>
@@ -61,18 +60,12 @@
             <h4 class="mb-3">Video List</h4>
             <hr>
 
-            <video id="player" style="position: static;" controls width="500">
-                <source src="{{url_for('static', filename='TEST1.mp4')}}" type="video/mp4">
-                <a href="{{url_for('static', filename='TEST1.mp4')}}">MP4</a>
-            </video>
-
-
             <!-- Video List -->
             <div class="mainclass">
                 {% for item in list %}
                     {% if item[8] == "complete" %}
                         <div style="text-align: center;">
-                            <video id="player" style="position: static;" controls width="500">
+                            <video id="players" style="position: static;" controls width="500">
                                 <source src="{{url_for('static', filename=item[0])}}" type="video/mp4">
                                 <a href="{{url_for('static', filename=item[0])}}">MP4</a>
                             </video>
@@ -99,8 +92,9 @@
 <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 
 <!-- 사용자 JS -->
-<script src="{{ url_for('static', filename='js/law.js') }}"></script>
 <script src="{{ url_for('static', filename='js/nav.js') }}"></script>
+<script src="{{ url_for('static', filename='js/signup.js') }}"></script>
+<script src="{{ url_for('static', filename='js/video.js') }}"></script>
 
 </body>
 </html>
